Fix #104: Address graph diagnostics review